// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has an error 1`] = `""`;

exports[`should render correctly when logged in 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="medium"
  />,
  <Toolbar
    key="toolbar"
  />,
]
`;

exports[`should render correctly when narrow 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="small"
  />,
  <Toolbar
    key="toolbar"
  />,
]
`;

exports[`should render correctly when showing the sidenav 1`] = `
Array [
  <HeaderLogo
    className="src-modules-header-index__logo"
    key="logo"
    size="medium"
  />,
  <Toolbar
    key="toolbar"
  />,
]
`;
